src/run/run_environment/github_actions/snapshots/codspeed__run__run_environment__github_actions__provider__tests__matrix_job_run_environment_metadata-2.snap
---
source: src/run/run_environment/github_actions/provider.rs
expression: run_part
---
{
  "runId": "6957110437",
  "runPartId": "log-env-{\"runner-version\":\"3.2.1\",\"numeric-value\":123456789}-{\"job-total\":2,\"job-index\":1}",
  "jobName": "log-env",
  "metadata": {
    "job-index": 1,
    "job-total": 2,
    "numeric-value": 123456789,
    "runner-version": "3.2.1"
  }
}
