src/run/run_environment/github_actions/snapshots/codspeed__run__run_environment__github_actions__provider__tests__pull_request_run_environment_metadata-2.snap
---
source: src/run/run_environment/github_actions/provider.rs
expression: run_part
---
{
  "runId": "6957110437",
  "runPartId": "log-env",
  "jobName": "log-env",
  "metadata": {}
}
